<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_title_hint">title of crime</string>
    <string name="date_picker_title">Date Of Crime:</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s crimes</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s,%3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is unsolved </string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_suspect">The suspect is %s</string>
    <string name="crime_report_subject">Criminal Intent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>

</resources>
